--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,15 @@ h1, h2, h3 {
     font-family: "Open Sans", sans-serif;
 }
 
+.navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
+    color: white;
+}
+
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-nav > li > a:hover {
+    color:white;
+    opacity:0.75;
+}
+
 .navbar, .home-callout {
     //Gradient provided by @_ighosh from uiGradients.com
     background: #00c6ff;  /* fallback for old browsers */    
