Refactored with Sass

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,19 +17,23 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+//Typography styles
 h1, h2, h3 {
     font-family: "Open Sans", sans-serif;
 }
 
-.navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
+//Navbar link styles
+.navbar-default .navbar-brand,
+.navbar-default .navbar-nav > li > a {
     color: white;
+    &:hover {
+        color: white;
+        opacity: 0.75;
+    }
 }
 
-.navbar-default .navbar-brand:hover, .navbar-default .navbar-nav > li > a:hover {
-    color:white;
-    opacity:0.75;
-}
 
+//Background gradient
 .navbar, .home-callout {
     //Gradient provided by @_ighosh from uiGradients.com
     background: #00c6ff;  /* fallback for old browsers */    
@@ -37,6 +41,7 @@ h1, h2, h3 {
     background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }            
 
+// Homepage stlyes
 .home-callout {
     color: white;
     margin-top: -20px;
