--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -51,7 +51,12 @@ h1, h2, h3 {
     padding-bottom: 100px;
 }
 
-
+// Nav styles
 .navbar {
     border: none;
+}
+
+.navbar-brand {
+    font-family:'Open Sans', sans-serif;
+    font-weight: 800;
 }
