--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,4 @@
-<h1>About Page</h1>
+<div class="container text-center">
+    <h1>About Page</h1>
+    <p>We are DevMatch. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, obcaecati, est magni quo earum deserunt neque saepe nam libero adipisci maxime assumenda enim nulla mollitia suscipit ullam fuga reiciendis quam.</p>
+</div>
